--- a/src/main/resources/templates/version_list.html
+++ b/src/main/resources/templates/version_list.html
@@ -111,6 +111,10 @@
                                                 <td><label for="classFiles">字节码上传：</label></td>
                                                 <td style="width: 350px;"><input id="classFiles" name="classFiles" type="file" webkitdirectory multiple required/><br/></td>
                                             </tr>
+                                            <tr>
+                                                <td><label for="jarFile">jar包上传：</label></td>
+                                                <td style="width: 350px;"><input id="jarFile" name="jarFile" type="file" required/><br/></td>
+                                            </tr>
                                         </table>
                                         <style>
                                             td {
