--- a/src/main/resources/templates/project_list.html
+++ b/src/main/resources/templates/project_list.html
@@ -38,7 +38,7 @@
                     <div class="navbar-collapse collapse" id="navbar">
                         <ul class="nav navbar-nav">
                             <li>
-                                <a href="#"><i class="fa fa-home"></i> <span class="nav-label">首页</span></a>
+                                <a href="/view/main"><i class="fa fa-home"></i> <span class="nav-label">首页</span></a>
                             </li>
                             <li class="active">
                                 <a href="/view/projects"><i class="fa fa-tasks"></i> <span class="nav-label">我的任务</span></a>
