--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -17,6 +17,8 @@
     <!-- Mainly scripts -->
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js?v=3.4.0"></script>
+    <script src="/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+    <script src="/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
     <script src="/js/layer/layer.js"></script>
 
 </head>
@@ -72,6 +74,8 @@
                     <div class="col-lg-12">
                         <div class="ibox float-e-margins">
                             <div class="ibox-title">
+                                <a class="btn btn-primary" href="#" onclick="getCodeData()">数据收集</a>
+                                <a class="btn btn-warning" href="#" onclick="cluster()">聚类分析</a>
                                 <div class="ibox-tools">
                                     <a class="collapse-link">
                                         <i class="fa fa-chevron-up"></i>
@@ -79,7 +83,7 @@
                                 </div>
                             </div>
                             <div class="ibox-content">
-                                <a class="btn btn-primary" href="#" onclick="getCodeData()">数据收集</a>
+                                <table class="table table-hover" id="violationTable"></table>
                             </div>
                         </div>
                     </div>
@@ -96,6 +100,45 @@
 </div>
 </body>
 <script>
+    // $(document).ready(function() {
+    //     $("#violationTable").bootstrapTable({
+    //         url:'/cluster',
+    //         type:'get',
+    //         striped: true, //是否显示行间隔色
+    //         pageNumber: 1, //初始化加载第一页
+    //         pagination: true, //是否分页
+    //         sidePagination: 'client', //server:服务器端分页|client：前端分页
+    //         pageSize: 5, //单页记录数
+    //         pageList: [1, 5, 10], //可选择单页记录数
+    //         showRefresh: true, //刷新按钮
+    //         rowStyle: style,
+    //         columns: [{
+    //             title: '#',
+    //             field: 'cnt',
+    //             sortable: true,
+    //             formatter: function(value, row, index) {
+    //                 return index + 1;
+    //             }
+    //         }, {
+    //             title: '漏洞类型',
+    //             field: 'type',
+    //             sortable: true
+    //         }, {
+    //             title: '优先级',
+    //             field: 'priority',
+    //             sortable: true
+    //         }, {
+    //             title: '文件名称',
+    //             field: 'sourcePath',
+    //             sortable: true
+    //         }, {
+    //             title: '结果',
+    //             field: 'state',
+    //             sortable: true,
+    //             formatter: num2Str
+    //         }],
+    //     })
+    // });
     function getCodeData(){
         $.ajax({
             url:'/generateCodeData',
@@ -106,6 +149,82 @@
                 }
             }
         })
+    }
+    function cluster(){
+        layer.open({
+            title: false,
+            content: '分析中，请等待',
+            anim: 3,
+            btn: [],
+            yes: function(index, layero) {
+
+            },
+            cancel: function() {
+                return true
+            }
+        });
+        $.ajax({
+            url:'/cluster',
+            method:'get',
+            success:function (data){
+                $("#violationTable").bootstrapTable('destroy').bootstrapTable({
+                    data: data,
+                    striped: true, //是否显示行间隔色
+                    pageNumber: 1, //初始化加载第一页
+                    pagination: true, //是否分页
+                    sidePagination: 'client', //server:服务器端分页|client：前端分页
+                    pageSize: 5, //单页记录数
+                    pageList: [1, 5, 10], //可选择单页记录数
+                    showRefresh: true, //刷新按钮
+                    rowStyle: style,
+                    columns: [{
+                        title: '#',
+                        field: 'cnt',
+                        sortable: true,
+                        formatter: function(value, row, index) {
+                            return index + 1;
+                        }
+                    }, {
+                        title: '漏洞类型',
+                        field: 'type',
+                        sortable: true
+                    }, {
+                        title: '项目名称',
+                        field: 'projectName',
+                        sortable: true
+                    }, {
+                        title: '版本名称',
+                        field: 'versionName',
+                        sortable: true
+                    }, {
+                        title: '文件名称',
+                        field: 'fileName',
+                        sortable: true
+                    },{
+                        title: '结果',
+                        field: 'state',
+                        sortable: true,
+                        formatter: num2Str
+                    }],
+                })
+            }
+        })
+    }
+    function style(row, index) {
+        let style = "";
+        if (row.state === 1) {
+            style = "danger";
+        }
+        return {
+            classes: style
+        };
+    }
+    function num2Str(value, row, index){
+        if (row.state === 1){
+            return "正报";
+        }else{
+            return "误报";
+        }
     }
 </script>
 </html>
