--- a/src/main/resources/templates/project_list.html
+++ b/src/main/resources/templates/project_list.html
@@ -236,7 +236,7 @@
 
             },
             cancel: function() {
-                return false
+                return true
             }
         });
         $.ajax({
